fix(styles): fix issues with progress indicator overflow text wrapping

--- a/src/styles/progress-indicator.scss
+++ b/src/styles/progress-indicator.scss
@@ -100,8 +100,8 @@ $fd-progress-indicator-states: (
 
     @include fd-set-padding-left(0.5rem);
 
-    line-height: 1;
     overflow: hidden;
+    white-space: normal;
   }
 
   &__overflow-close {
